--- a/src/SMTC/MainBundle/Resources/views/Example/Form/edit_users.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/Form/edit_users.html.twig
@@ -1,6 +1,12 @@
 {% extends 'MainBundle::layout.html.twig' %}
 
+{% import 'MainBundle:Macros:breadcrumb.html.twig' as breadcrumb %}
+
 {% set section = 'examples' %}
+
+{% block breadcrumb %}
+{{ breadcrumb.show_example_detail('Embeber formularios con relaciones', 'examples_forms', 'Editar usuarios') }}
+{% endblock %}
 
 {% form_theme form _self %}
 
@@ -18,7 +24,7 @@
 
 {% block _users_users_entry_row %}
 {% spaceless %}
-    <div class="span12">
+    <div class="col-md-12">
         {{ form_label(form) }}
         {{ form_errors(form) }}
         {{ form_widget(form) }}
@@ -29,7 +35,7 @@
 
 {% block _users_users_entry_addresses_entry_row %}
 {% spaceless %}
-    <div class="span3 well address">
+    <div class="col-md-3 well address">
         <button type="button" class="close">&times;</button>
         {{ form_label(form) }}
         {{ form_errors(form) }}
@@ -68,7 +74,7 @@
         var collectionHolder = $('div.addresses');
 
         // setup an "add a address" link
-        var $newLinkLi = $('<a href="#" class="btn btn-mini btn-info add_address_link"><i class="icon-plus icon-white"></i> Añadir una dirección</a>');
+        var $newLinkLi = $('<a href="#" class="btn btn-xs btn-info add_address_link"><i class="glyphicon glyphicon-plus glyphicon-white"></i> Añadir una dirección</a>');
 
         $(function(){
 
@@ -134,7 +140,7 @@
 
 {% block content %}
     <div class="row">
-        <div class="span12">
+        <div class="col-md-12">
             <form action="{{ path('examples_forms_users_edit') }}" method="POST" novalidate>
                 {{ form_widget(form) }}
                 <div class="form-actions">
