--- a/src/SMTC/MainBundle/Resources/views/Example/User/userPassword.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/User/userPassword.html.twig
@@ -1,18 +1,24 @@
 {% extends 'MainBundle::layout.html.twig' %}
 
+{% import 'MainBundle:Macros:breadcrumb.html.twig' as breadcrumb %}
+
 {% set section = 'examples' %}
+
+{% block breadcrumb %}
+{{ breadcrumb.show_example('UserPassword Constraint') }}
+{% endblock %}
 
 {% block content %}
     <div class="row">
-        <div class="span12">
+        <div class="col-md-12">
             <form action="{{ path('examples_userpassword') }}" method="POST" novalidate>
                 {{ form_row(form.oldPassword) }}
                 {{ form_rest(form) }}
+                <p><span class="label label-primary">Password</span> <strong>smtcpass</strong></p>
                 <button type="submit" class="btn btn-success">
                     Guardar
                 </button>
             </form>
-            <p>Password: <strong>smtcpass</strong></p>
         </div>
     </div>
 {% endblock %}
