--- a/src/SMTC/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Default/index.html.twig
@@ -1,12 +1,12 @@
 {% extends 'MainBundle::layout.html.twig' %}
 
 {% block content %}
-    <div class="hero-unit">
-        <h1>Talk is cheap. Show me the code!</h1>
+    <div class="jumbotron">
+        <h1>Talk is cheap. <br>Show me the code!</h1>
         <p>En esta página veremos en funcionamiento los ejemplos que se pueden ver en el blog relacionados con Symfony2 y enlazaremos con el código en Github.</p>
         <p>
-            <a href="{{ path('examples') }}" class="btn btn-success btn-large">Ver ejemplos</a>
-            <a href="http://showmethecode.es" class="btn btn-primary btn-large">{{ global.button_msg }}</a>
+            <a href="{{ path('examples') }}" class="btn btn-success btn-lg">Ver ejemplos</a>
+            <a href="http://showmethecode.es" class="btn btn-primary btn-lg">{{ global.button_msg }}</a>
         </p>
     </div>
 {% endblock %}
