--- a/src/SMTC/MainBundle/Resources/views/Example/Event/events.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/Event/events.html.twig
@@ -1,10 +1,16 @@
 {% extends 'MainBundle::layout.html.twig' %}
 
+{% import 'MainBundle:Macros:breadcrumb.html.twig' as breadcrumb %}
+
 {% set section = 'examples' %}
+
+{% block breadcrumb %}
+{{ breadcrumb.show_example('Eventos') }}
+{% endblock %}
 
 {% block content %}
     <div class="row">
-        <div class="span12">
+        <div class="col-md-12">
             <ul>
                 <li><a href="{{ path('examples_events_comment') }}">Añadir IP al comentario</a></li>
             </ul>
