--- a/src/SMTC/MainBundle/Resources/views/Example/FormEmptyData/newTask.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/FormEmptyData/newTask.html.twig
@@ -1,10 +1,16 @@
 {% extends 'MainBundle::layout.html.twig' %}
 
+{% import 'MainBundle:Macros:breadcrumb.html.twig' as breadcrumb %}
+
 {% set section = 'examples' %}
+
+{% block breadcrumb %}
+{{ breadcrumb.show_example_detail('Configurar empty_data en formularios', 'examples_form_empty_data', 'Crear Tarea') }}
+{% endblock %}
 
 {% block content %}
     <div class="row">
-        <div class="span12">
+        <div class="col-md-12">
             {{ form_start(form) }}
                 {{ form_widget(form) }}
                 <div class="form-actions">
