--- a/src/SMTC/MainBundle/Resources/views/Example/Query/subqueries.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/Query/subqueries.html.twig
@@ -1,10 +1,16 @@
 {% extends 'MainBundle::layout.html.twig' %}
 
+{% import 'MainBundle:Macros:breadcrumb.html.twig' as breadcrumb %}
+
 {% set section = 'examples' %}
+
+{% block breadcrumb %}
+{{ breadcrumb.show_example('Doctrine2: Subconsultas') }}
+{% endblock %}
 
 {% block content %}
     <div class="row">
-        <div class="span12">
+        <div class="col-md-12">
             <h2>Ver usuarios con direcciones en</h2>
             <ul>
                 {% for country in countries %}
