--- a/src/SMTC/MainBundle/Resources/views/Example/VirtualForms/new_dog.html.twig
+++ b/src/SMTC/MainBundle/Resources/views/Example/VirtualForms/new_dog.html.twig
@@ -1,10 +1,16 @@
 {% extends 'MainBundle::layout.html.twig' %}
 
+{% import 'MainBundle:Macros:breadcrumb.html.twig' as breadcrumb %}
+
 {% set section = 'examples' %}
+
+{% block breadcrumb %}
+{{ breadcrumb.show_example_detail('Opción virtual en los formularios', 'examples_virtual_forms', 'Perro') }}
+{% endblock %}
 
 {% block content %}
     <div class="row">
-        <div class="span12">
+        <div class="col-md-12">
             <h2>Perro</h2>
             <form action="{{ path('examples_virtual_forms_dog_create') }}" method="POST" novalidate>
                 {{ form_widget(form) }}
